Timer update(no file saving)

--- a/app/src/main/res/layout/buzzer3.xml
+++ b/app/src/main/res/layout/buzzer3.xml
@@ -6,24 +6,27 @@
     <Button
         android:id="@+id/player1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
         android:text="Player1"
-        android:textSize="24sp"
+        android:textSize="40sp"
         />
     <Button
         android:id="@+id/player2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
         android:text="Player2"
-        android:textSize="24sp"/>
+        android:textSize="40sp"/>
     <Button
         android:id="@+id/player3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
         android:text="Player3"
-        android:textSize="24sp"/>
+        android:textSize="40sp"/>
 
 </LinearLayout>
