--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select a game mode"
+            android:textSize="24sp"
+            android:layout_gravity="center_horizontal"
+            />
+
+        <Button
+            android:id="@+id/timer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reaction Timer"
+            android:layout_gravity="center_horizontal"
+            android:textSize="24sp"
+            />
+        <Button
+            android:id="@+id/buzzer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gameshow Buzzer"
+            android:textSize="24sp"
+            android:layout_gravity="center_horizontal"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
