--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <TextView
-        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="\n\n\nWait!"
+        android:text="@string/timer_guide"
         android:textSize="24sp"
         android:layout_gravity="center_horizontal"
         />
 
+
     <Button
-        android:id="@+id/click"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:text="Click here"
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="\n    Start game    \n"
         android:textSize="24sp"
-        android:layout_gravity="center_horizontal"/>
+        />
 
 </LinearLayout>
