--- a/app/src/main/res/layout/buzzer.xml
+++ b/app/src/main/res/layout/buzzer.xml
@@ -3,37 +3,47 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="@android:color/white">
 
-    <Button
-        android:id="@+id/oneplayer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="1 player"
-        android:textSize="24sp"
-        />
-    <Button
-        android:id="@+id/twoplayer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="2 players"
-        android:textSize="24sp"
-        />
-    <Button
-        android:id="@+id/threeplayer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="3 players"
-        android:textSize="24sp"
-        />
-    <Button
-        android:id="@+id/fourplayer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="4 players"
-        android:textSize="24sp"
-        />
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical" android:layout_width="match_parent"
+            android:layout_height="match_parent" android:background="@android:color/white">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/buzzer_guide"
+                android:textSize="24sp"
+                android:layout_gravity="center_horizontal"
+                />
+
+            <Button
+                android:id="@+id/twoplayer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="2 players"
+                android:textSize="24sp"
+                />
+            <Button
+                android:id="@+id/threeplayer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="3 players"
+                android:textSize="24sp"
+                />
+            <Button
+                android:id="@+id/fourplayer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="4 players"
+                android:textSize="24sp"
+                />
+
+        </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
