--- a/app/src/main/res/layout/buzzer2.xml
+++ b/app/src/main/res/layout/buzzer2.xml
@@ -5,18 +5,20 @@
     <Button
         android:id="@+id/player1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
         android:text="Player1"
-        android:textSize="24sp"
+        android:textSize="50sp"
         />
     <Button
         android:id="@+id/player2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
         android:text="Player2"
-        android:textSize="24sp"
+        android:textSize="50sp"
         />
 
 </LinearLayout>
