--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,54 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Select a game mode"
-            android:textSize="24sp"
-            android:layout_gravity="center_horizontal"
-            />
 
-        <Button
-            android:id="@+id/timer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Reaction Timer"
-            android:layout_gravity="center_horizontal"
-            android:textSize="24sp"
-            />
-        <Button
-            android:id="@+id/buzzer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Gameshow Buzzer"
-            android:textSize="24sp"
-            android:layout_gravity="center_horizontal"
-            />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select a game mode"
+        android:textSize="24sp"
+        android:layout_gravity="center_horizontal"
+        />
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reaction Timer"
+        android:layout_gravity="center_horizontal"
+        android:textSize="24sp"
+        />
+    <Button
+        android:id="@+id/buzzer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gameshow Buzzer"
+        android:textSize="24sp"
+        android:layout_gravity="center_horizontal"
+        />
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="\n\n\n\n"
+        android:textSize="24sp"
+        android:layout_gravity="center_horizontal"
+        />
+
+    <Button
+        android:id="@+id/stat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Statics"
+        android:textSize="24sp"
+        android:layout_gravity="center_horizontal"
+        />
+
+
+</LinearLayout>
