--- a/app/src/main/res/layout/activity_stat.xml
+++ b/app/src/main/res/layout/activity_stat.xml
@@ -1,43 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
-
-    <TextView
+    <Button
+        android:id="@+id/timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/buzzer_guide"
+        android:text="1.Reaction Timer Statistics"
         android:textSize="24sp"
         android:layout_gravity="center_horizontal"
         />
-
     <Button
-        android:id="@+id/twoplayer"
+        android:id="@+id/buzzer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="2 players"
+        android:text="2.Buzzer Counts"
         android:textSize="24sp"
+        android:layout_gravity="center_horizontal"
         />
     <Button
-        android:id="@+id/threeplayer"
+        android:id="@+id/clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="3 players"
+        android:text="3.Clear Statistics"
         android:textSize="24sp"
+        android:layout_gravity="center_horizontal"
         />
     <Button
-        android:id="@+id/fourplayer"
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="4 players"
+        android:text="4.Email Statistics"
         android:textSize="24sp"
+        android:layout_gravity="center_horizontal"
         />
 
 </LinearLayout>
