--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:id="@+id/stat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Statics"
+        android:text="Statistics"
         android:textSize="24sp"
         android:layout_gravity="center_horizontal"
         />
